Add github actions

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
+[![Codecov test coverage](https://codecov.io/gh/petersonR/practicalPSI/graph/badge.svg)](https://app.codecov.io/gh/petersonR/practicalPSI)
 <!-- badges: end -->
 
 
